# hale-solana

./: .gitignore  .vercelignore  Anchor.toml  DEVPOST_SUBMISSION.md  HALE_PITCH_DECK.md  INTENT_SCHEMA.md  PRESENTATION.html  README.md  debug_output.txt  demo_run.py  heartbeat.md  package-lock.json  package.json  requirements.txt  skill.md  solana.logs  test_output.txt  test_output_2.txt  use_hale_api.py  vercel.json
api/: erc20_abi.json  escrow_abi.json  factory_abi.json  hale_bridge_relayer.py  hale_oracle_backend.py  hale_oracle_system_prompt.txt  hale_sdk.py  index.py  pyproject.toml  requirements.txt  solana-keypair.json  solana_attestation_demo.py  solana_attestation_parser.py
assets/: PRESENTATION.html
docs/: VISION.md
docs/architecture/: ESCROW_DEMO.md  ESCROW_DEMO_QUICK.md  HALE_ORACLE_FEATURES.md  SYSTEM_FLOW.md  VERIFY_ON_EXPLORER.md
docs/bridge/: BRIDGE_ARCHITECTURE.md  BRIDGE_COMPLETE.md  BRIDGE_QUICKSTART.md  BRIDGE_VALIDATION_REPORT.md
docs/demo/: DEMO_CHECKLIST.md  DEMO_GUIDE.md  DEMO_SCRIPT.md
docs/frontend/: FRONTEND_DEMO.md  FRONTEND_DEMO_QUICK.md  (+4 more)
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
hale-auditor/: index.ts  package-lock.json  package.json
hale-dashboard/: index.html  package-lock.json  package.json  tailwind.config.cjs
hale-demo-jupiter/: index.ts  package-lock.json  package.json
hale-sdk/: demo.ts  idl.json  index.ts  package-lock.json  package.json  tsconfig.json
schemas/: intent.schema.json
scripts/: generate_intent_hash.py
tests/: hale-escrow.js  hale-solana.js
(+47 files in other folders)
